--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,10 +7,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
 dist
 dist-ssr
 *.local
+
+# TypeScript cache
+*.tsbuildinfo
+
+# dotenv environment variable files
+.env.*
+!.env.example
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Coverage directory
+coverage
+*.lcov
 
 # Editor directories and files
 .vscode/*
