--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ python-multipart = "^0.0.18"
 python-jose = { extras = ["cryptography"], version = "^3.3.0" }
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 email-validator = "^2.2.0"
+celery = {extras = ["redis"], version = "^5.6.2"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
