feat(bot): add Telegram bot implementation with account linking
- Add Telegram bot module with initialization and entry point script
- Implement telegram_bot.py with bot application factory and command handlers
- Add /start command handler supporting deep link token-based account linking
- Add /status command to display linked account information and filter alerts
- Add /help command with available commands and usage instructions
- Add /filters command to list active filters with alert status
- Add /alerts command to manage notification preferences
- Integrate TelegramService for account linking and user management
- Configure async database session factory for bot handlers
- Update environment configuration with Telegram bot settings (token, username, TTL)
- Add python-telegram-bot dependency to poetry.lock and pyproject.toml
- Update docker-compose.yml to support running bot as standalone service
- Add Phase 5 task documentation for notifications and scanner feature
- Enable users to receive real-time match notifications through Telegram

--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,10 @@ ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 # ===========================================
 # Telegram Bot Configuration (Phase 5)
 # ===========================================
-# TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-# TELEGRAM_CHAT_ID=your_default_chat_id
+# Get your bot token from @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_from_botfather
+TELEGRAM_BOT_USERNAME=FilterBetsBot
+TELEGRAM_LINK_TOKEN_TTL=1800
 
 # ===========================================
 # External API Keys (Phase 2+)
