--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ python-jose = { extras = ["cryptography"], version = "^3.3.0" }
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 email-validator = "^2.2.0"
 celery = {extras = ["redis"], version = "^5.6.2"}
+python-telegram-bot = "^21.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
