--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 email-validator = "^2.2.0"
 celery = {extras = ["redis"], version = "^5.6.2"}
 python-telegram-bot = "^21.0"
+fastapi-mcp = "^0.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
