--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,7 @@ pytest-cov = "^6.0.0"
 httpx = "^0.28.0"
 ruff = "^0.9.0"
 mypy = "^1.14.0"
+types-python-jose = "^3.3.4"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -81,7 +82,7 @@ check_untyped_defs = true
 plugins = ["pydantic.mypy"]
 
 [[tool.mypy.overrides]]
-module = ["asyncpg.*", "redis.*"]
+module = ["asyncpg.*", "redis.*", "celery.*", "telegram.*"]
 ignore_missing_imports = true
 
 # Pytest configuration
