--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
     "kaggle (>=1.8.3,<2.0.0)",
-    "kagglehub (>=0.4.0,<0.5.0)"
+    "kagglehub (>=0.4.0,<0.5.0)",
+    "pandas (>=2.0.0,<3.0.0)",
+    "numpy (>=1.24.0,<2.0.0)",
+    "pyarrow (>=15.0.0,<17.0.0)",
+    "matplotlib (>=3.7.0,<4.0.0)",
+    "seaborn (>=0.12.0,<0.14.0)"
 ]
 
 
