feat(mcp): Integrate FastAPI MCP for API testing
This commit integrates the FastAPI MCP (Model-driven Conversational Platform) for API testing and interaction.

- Adds a new `/mcp` endpoint to the backend to expose read-only API endpoints for LLM integration.
- Includes a new `mcp_service` to handle the logic for the MCP endpoint.
- Adds tests for the new MCP endpoint.
- Creates a new `McpTestPage` on the frontend to provide a user interface for interacting with the MCP endpoint.
- Updates documentation and configuration to reflect the changes.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,13 +44,19 @@ services:
       - DATABASE_URL=postgresql+asyncpg://filterbets:filterbets@db:5432/filterbets
       - DATABASE_URL_SYNC=postgresql://filterbets:filterbets@db:5432/filterbets
       - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/2
       - DEBUG=true
       - ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://frontend:80
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app # Mount source code for live reloading
       - /app/.venv # Cache virtual environment
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     depends_on:
       db:
         condition: service_healthy
@@ -76,6 +82,56 @@ services:
     depends_on:
       - backend
 
+  # Celery Worker (Development Mode)
+  celery-worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: filterbets-celery-worker
+    restart: unless-stopped
+    command: poetry run celery -A app.tasks.celery_app worker --loglevel=info -Q stats,backtest,scanner,notifications,celery --beat
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://filterbets:filterbets@db:5432/filterbets
+      - DATABASE_URL_SYNC=postgresql://filterbets:filterbets@db:5432/filterbets
+      - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/2
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_BOT_USERNAME=${TELEGRAM_BOT_USERNAME:-filterbet_prematch_spy_bot}
+      - PYTHONPATH=/app
+    volumes:
+      - ./backend:/app
+      - /app/.venv
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  # Celery Monitoring (Flower)
+  flower:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: filterbets-flower
+    restart: unless-stopped
+    command: poetry run celery -A app.tasks.celery_app flower --port=5555
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/2
+      - PYTHONPATH=/app
+    ports:
+      - "5555:5555"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+    depends_on:
+      redis:
+        condition: service_healthy
+
   # Telegram Bot (Development Mode)
   telegram-bot:
     build:
@@ -87,12 +143,17 @@ services:
     environment:
       - DATABASE_URL=postgresql+asyncpg://filterbets:filterbets@db:5432/filterbets
       - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/2
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - TELEGRAM_BOT_USERNAME=${TELEGRAM_BOT_USERNAME:-filterbet_prematch_spy_bot}
       - PYTHONPATH=/app
     volumes:
       - ./backend:/app
       - /app/.venv
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     depends_on:
       db:
         condition: service_healthy
