--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -7,7 +7,9 @@ WORKDIR /app
 ENV POETRY_HOME="/opt/poetry" \
     POETRY_VIRTUALENVS_CREATE=true \
     POETRY_VIRTUALENVS_IN_PROJECT=true \
-    POETRY_NO_INTERACTION=1
+    POETRY_NO_INTERACTION=1 \
+    POETRY_HTTP_TIMEOUT=120 \
+    POETRY_NETWORK_MAX_RETRIES=5
 
 RUN pip install --no-cache-dir poetry==2.1.3
 
@@ -15,7 +17,9 @@ RUN pip install --no-cache-dir poetry==2.1.3
 COPY pyproject.toml poetry.lock* ./
 
 # Install ALL dependencies (including dev dependencies for development)
-RUN poetry install --no-root
+RUN --mount=type=cache,target=/root/.cache/pypoetry \
+    --mount=type=cache,target=/root/.cache/pip \
+    poetry install --no-interaction --no-ansi --no-root -vv
 
 # Set environment variables
 ENV PATH="/app/.venv/bin:$PATH" \
