--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ email-validator = "^2.2.0"
 celery = {extras = ["redis"], version = "^5.6.2"}
 python-telegram-bot = "^21.0"
 fastapi-mcp = "^0.4.0"
+flower = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
