--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Darius Kassi",email = "kassidarius@gmail.com"}
 ]
 readme = "README.md"
-requires-python = "^3.12"
+requires-python = ">=3.12"
 dependencies = [
     "kaggle (>=1.8.3,<2.0.0)",
     "kagglehub (>=0.4.0,<0.5.0)",
